Fixed booking form on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -1643,7 +1643,7 @@ footer {
 .booking .container form .input-group.time {
   display: block;
 }
-.booking .container form #timepicker #wedding-time {
+/*.booking .container form #timepicker #wedding-time {*/
   height: 0px;
 }
 .booking .container form #timepicker .input-group-append {
@@ -1802,7 +1802,7 @@ hr {
   .booking .container form .col-md-12.checkbox {
     margin-top: 10px;
   }
-  #timepicker input {
+  .booking .container form #timepicker input {
     display: none;
   }
   .booking .container form .time-label {
@@ -2376,6 +2376,9 @@ hr {
   }
   .booking .container form .col-md-12.checkbox {
     margin-top: 20px;
+  }
+  .input-daterange {
+    width: 100% !important;
   }
 } 
 @media only screen and (max-width: 300px) {
